py/c_parser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> ext_declarations fundefs instructions
Rule 2     ext_declarations -> declarations
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> declaration
Rule 5     declarations -> <empty>
Rule 6     declaration -> fundefs
Rule 7     declaration -> TYPE inits ;
Rule 8     declaration -> error ;
Rule 9     inits -> inits , init
Rule 10    inits -> init
Rule 11    init -> ID = expression
Rule 12    instructions -> instructions instruction
Rule 13    instructions -> instruction
Rule 14    instruction -> labeled_instr
Rule 15    instruction -> assignment ;
Rule 16    instruction -> declaration
Rule 17    instruction -> choice_instr
Rule 18    instruction -> while_instr
Rule 19    instruction -> for_instr
Rule 20    instruction -> return_instr
Rule 21    instruction -> break_instr
Rule 22    instruction -> continue_instr
Rule 23    instruction -> compound_instr
Rule 24    instruction -> statement
Rule 25    instruction -> expression ;
Rule 26    statement -> ID ( expr_list_or_empty ) ;
Rule 27    labeled_instr -> ID : instruction
Rule 28    assignment -> ID = expression
Rule 29    assignment -> ID = error ;
Rule 30    choice_instr -> IF ( condition ) instruction
Rule 31    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 32    choice_instr -> IF ( error ) instruction
Rule 33    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 34    while_instr -> WHILE ( condition ) instruction
Rule 35    for_instr -> FOR ( instruction expression ; assignment ) instruction
Rule 36    for_instr -> FOR ( error ) instruction
Rule 37    while_instr -> WHILE ( error ) instruction
Rule 38    return_instr -> RETURN expression ;
Rule 39    continue_instr -> CONTINUE ;
Rule 40    break_instr -> BREAK ;
Rule 41    compound_instr -> { declarations instructions }
Rule 42    condition -> expression
Rule 43    const -> INTEGER
Rule 44    const -> FLOAT
Rule 45    const -> STRING
Rule 46    expression -> const
Rule 47    expression -> ID
Rule 48    expression -> ( expression )
Rule 49    expression -> ( error )
Rule 50    expression -> ID ( expr_list_or_empty )
Rule 51    expression -> ID ( error )
Rule 52    expression -> expression + expression
Rule 53    expression -> expression - expression
Rule 54    expression -> expression * expression
Rule 55    expression -> expression / expression
Rule 56    expression -> expression % expression
Rule 57    expression -> expression | expression
Rule 58    expression -> expression & expression
Rule 59    expression -> expression ^ expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression SHL expression
Rule 63    expression -> expression SHR expression
Rule 64    expression -> expression EQ expression
Rule 65    expression -> expression NEQ expression
Rule 66    expression -> expression > expression
Rule 67    expression -> expression < expression
Rule 68    expression -> expression LE expression
Rule 69    expression -> expression GE expression
Rule 70    expr_list_or_empty -> expr_list
Rule 71    expr_list_or_empty -> <empty>
Rule 72    expr_list -> expr_list , expression
Rule 73    expr_list -> expression
Rule 74    fundefs -> fundefs fundef
Rule 75    fundefs -> fundef
Rule 76    fundefs -> <empty>
Rule 77    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 78    args_list_or_empty -> args_list
Rule 79    args_list_or_empty -> <empty>
Rule 80    args_list -> args_list , arg
Rule 81    args_list -> arg
Rule 82    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 56
&                    : 58
(                    : 26 30 31 32 33 34 35 36 37 48 49 50 51 77
)                    : 26 30 31 32 33 34 35 36 37 48 49 50 51 77
*                    : 54
+                    : 52
,                    : 9 72 80
-                    : 53
/                    : 55
:                    : 27
;                    : 7 8 15 25 26 29 35 38 39 40
<                    : 67
=                    : 11 28 29
>                    : 66
AND                  : 60
BREAK                : 40
CONTINUE             : 39
ELSE                 : 31 33
EQ                   : 64
FLOAT                : 44
FOR                  : 35 36
GE                   : 69
ID                   : 11 26 27 28 29 47 50 51 77 82
IF                   : 30 31 32 33
INTEGER              : 43
LE                   : 68
NEQ                  : 65
OR                   : 61
RETURN               : 38
SHL                  : 62
SHR                  : 63
STRING               : 45
TYPE                 : 7 77 82
WHILE                : 34 37
^                    : 59
error                : 8 29 32 33 36 37 49 51
{                    : 41
|                    : 57
}                    : 41

Nonterminals, with rules where they appear

arg                  : 80 81
args_list            : 78 80
args_list_or_empty   : 77
assignment           : 15 35
break_instr          : 21
choice_instr         : 17
compound_instr       : 23 77
condition            : 30 31 34
const                : 46
continue_instr       : 22
declaration          : 3 4 16
declarations         : 2 3 41
expr_list            : 70 72
expr_list_or_empty   : 26 50
expression           : 11 25 28 35 38 42 48 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 72 73
ext_declarations     : 1
for_instr            : 19
fundef               : 74 75
fundefs              : 1 6 74
init                 : 9 10
inits                : 7 9
instruction          : 12 13 27 30 31 31 32 33 33 34 35 35 36 37
instructions         : 1 12 41
labeled_instr        : 14
program              : 0
return_instr         : 20
statement            : 24
while_instr          : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . ext_declarations fundefs instructions
    (2) ext_declarations -> . declarations
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (5) declarations -> .
    (6) declaration -> . fundefs
    (7) declaration -> . TYPE inits ;
    (8) declaration -> . error ;
    (74) fundefs -> . fundefs fundef
    (75) fundefs -> . fundef
    (76) fundefs -> .
    (77) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! reduce/reduce conflict for ID resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for IF resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for WHILE resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for FOR resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for RETURN resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for { resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for ( resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for INTEGER resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for FLOAT resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for STRING resolved using rule 5 (declarations -> .)
  ! reduce/reduce conflict for $end resolved using rule 5 (declarations -> .)
    ID              reduce using rule 5 (declarations -> .)
    IF              reduce using rule 5 (declarations -> .)
    WHILE           reduce using rule 5 (declarations -> .)
    FOR             reduce using rule 5 (declarations -> .)
    RETURN          reduce using rule 5 (declarations -> .)
    BREAK           reduce using rule 5 (declarations -> .)
    CONTINUE        reduce using rule 5 (declarations -> .)
    {               reduce using rule 5 (declarations -> .)
    (               reduce using rule 5 (declarations -> .)
    INTEGER         reduce using rule 5 (declarations -> .)
    FLOAT           reduce using rule 5 (declarations -> .)
    STRING          reduce using rule 5 (declarations -> .)
    $end            reduce using rule 5 (declarations -> .)
    TYPE            shift and go to state 6
    error           shift and go to state 7

  ! TYPE            [ reduce using rule 5 (declarations -> .) ]
  ! error           [ reduce using rule 5 (declarations -> .) ]
  ! TYPE            [ reduce using rule 76 (fundefs -> .) ]
  ! error           [ reduce using rule 76 (fundefs -> .) ]
  ! ID              [ reduce using rule 76 (fundefs -> .) ]
  ! IF              [ reduce using rule 76 (fundefs -> .) ]
  ! WHILE           [ reduce using rule 76 (fundefs -> .) ]
  ! FOR             [ reduce using rule 76 (fundefs -> .) ]
  ! RETURN          [ reduce using rule 76 (fundefs -> .) ]
  ! BREAK           [ reduce using rule 76 (fundefs -> .) ]
  ! CONTINUE        [ reduce using rule 76 (fundefs -> .) ]
  ! {               [ reduce using rule 76 (fundefs -> .) ]
  ! (               [ reduce using rule 76 (fundefs -> .) ]
  ! INTEGER         [ reduce using rule 76 (fundefs -> .) ]
  ! FLOAT           [ reduce using rule 76 (fundefs -> .) ]
  ! STRING          [ reduce using rule 76 (fundefs -> .) ]
  ! $end            [ reduce using rule 76 (fundefs -> .) ]

    program                        shift and go to state 1
    ext_declarations               shift and go to state 2
    fundefs                        shift and go to state 3
    declarations                   shift and go to state 4
    declaration                    shift and go to state 5
    fundef                         shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> ext_declarations . fundefs instructions
    (74) fundefs -> . fundefs fundef
    (75) fundefs -> . fundef
    (76) fundefs -> .
    (77) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

  ! shift/reduce conflict for TYPE resolved as shift
    ID              reduce using rule 76 (fundefs -> .)
    error           reduce using rule 76 (fundefs -> .)
    IF              reduce using rule 76 (fundefs -> .)
    WHILE           reduce using rule 76 (fundefs -> .)
    FOR             reduce using rule 76 (fundefs -> .)
    RETURN          reduce using rule 76 (fundefs -> .)
    BREAK           reduce using rule 76 (fundefs -> .)
    CONTINUE        reduce using rule 76 (fundefs -> .)
    {               reduce using rule 76 (fundefs -> .)
    (               reduce using rule 76 (fundefs -> .)
    INTEGER         reduce using rule 76 (fundefs -> .)
    FLOAT           reduce using rule 76 (fundefs -> .)
    STRING          reduce using rule 76 (fundefs -> .)
    $end            reduce using rule 76 (fundefs -> .)
    TYPE            shift and go to state 10

  ! TYPE            [ reduce using rule 76 (fundefs -> .) ]

    fundefs                        shift and go to state 9
    fundef                         shift and go to state 8

state 3

    (6) declaration -> fundefs .
    (74) fundefs -> fundefs . fundef
    (77) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

  ! shift/reduce conflict for TYPE resolved as shift
    error           reduce using rule 6 (declaration -> fundefs .)
    ID              reduce using rule 6 (declaration -> fundefs .)
    IF              reduce using rule 6 (declaration -> fundefs .)
    WHILE           reduce using rule 6 (declaration -> fundefs .)
    FOR             reduce using rule 6 (declaration -> fundefs .)
    RETURN          reduce using rule 6 (declaration -> fundefs .)
    BREAK           reduce using rule 6 (declaration -> fundefs .)
    CONTINUE        reduce using rule 6 (declaration -> fundefs .)
    {               reduce using rule 6 (declaration -> fundefs .)
    (               reduce using rule 6 (declaration -> fundefs .)
    INTEGER         reduce using rule 6 (declaration -> fundefs .)
    FLOAT           reduce using rule 6 (declaration -> fundefs .)
    STRING          reduce using rule 6 (declaration -> fundefs .)
    $end            reduce using rule 6 (declaration -> fundefs .)
    }               reduce using rule 6 (declaration -> fundefs .)
    ELSE            reduce using rule 6 (declaration -> fundefs .)
    TYPE            shift and go to state 10

  ! TYPE            [ reduce using rule 6 (declaration -> fundefs .) ]

    fundef                         shift and go to state 11

state 4

    (2) ext_declarations -> declarations .
    (3) declarations -> declarations . declaration
    (6) declaration -> . fundefs
    (7) declaration -> . TYPE inits ;
    (8) declaration -> . error ;
    (74) fundefs -> . fundefs fundef
    (75) fundefs -> . fundef
    (76) fundefs -> .
    (77) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! reduce/reduce conflict for ID resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for IF resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for WHILE resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for FOR resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for RETURN resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for BREAK resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for { resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for ( resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for INTEGER resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for FLOAT resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for STRING resolved using rule 2 (ext_declarations -> declarations .)
  ! reduce/reduce conflict for $end resolved using rule 2 (ext_declarations -> declarations .)
    ID              reduce using rule 2 (ext_declarations -> declarations .)
    IF              reduce using rule 2 (ext_declarations -> declarations .)
    WHILE           reduce using rule 2 (ext_declarations -> declarations .)
    FOR             reduce using rule 2 (ext_declarations -> declarations .)
    RETURN          reduce using rule 2 (ext_declarations -> declarations .)
    BREAK           reduce using rule 2 (ext_declarations -> declarations .)
    CONTINUE        reduce using rule 2 (ext_declarations -> declarations .)
    {               reduce using rule 2 (ext_declarations -> declarations .)
    (               reduce using rule 2 (ext_declarations -> declarations .)
    INTEGER         reduce using rule 2 (ext_declarations -> declarations .)
    FLOAT           reduce using rule 2 (ext_declarations -> declarations .)
    STRING          reduce using rule 2 (ext_declarations -> declarations .)
    $end            reduce using rule 2 (ext_declarations -> declarations .)
    TYPE            shift and go to state 6
    error           shift and go to state 7

  ! TYPE            [ reduce using rule 2 (ext_declarations -> declarations .) ]
  ! error           [ reduce using rule 2 (ext_declarations -> declarations .) ]
  ! TYPE            [ reduce using rule 76 (fundefs -> .) ]
  ! error           [ reduce using rule 76 (fundefs -> .) ]
  ! ID              [ reduce using rule 76 (fundefs -> .) ]
  ! IF              [ reduce using rule 76 (fundefs -> .) ]
  ! WHILE           [ reduce using rule 76 (fundefs -> .) ]
  ! FOR             [ reduce using rule 76 (fundefs -> .) ]
  ! RETURN          [ reduce using rule 76 (fundefs -> .) ]
  ! BREAK           [ reduce using rule 76 (fundefs -> .) ]
  ! CONTINUE        [ reduce using rule 76 (fundefs -> .) ]
  ! {               [ reduce using rule 76 (fundefs -> .) ]
  ! (               [ reduce using rule 76 (fundefs -> .) ]
  ! INTEGER         [ reduce using rule 76 (fundefs -> .) ]
  ! FLOAT           [ reduce using rule 76 (fundefs -> .) ]
  ! STRING          [ reduce using rule 76 (fundefs -> .) ]
  ! $end            [ reduce using rule 76 (fundefs -> .) ]

    declaration                    shift and go to state 12
    fundefs                        shift and go to state 3
    fundef                         shift and go to state 8

state 5

    (4) declarations -> declaration .

    TYPE            reduce using rule 4 (declarations -> declaration .)
    error           reduce using rule 4 (declarations -> declaration .)
    ID              reduce using rule 4 (declarations -> declaration .)
    IF              reduce using rule 4 (declarations -> declaration .)
    WHILE           reduce using rule 4 (declarations -> declaration .)
    FOR             reduce using rule 4 (declarations -> declaration .)
    RETURN          reduce using rule 4 (declarations -> declaration .)
    BREAK           reduce using rule 4 (declarations -> declaration .)
    CONTINUE        reduce using rule 4 (declarations -> declaration .)
    {               reduce using rule 4 (declarations -> declaration .)
    (               reduce using rule 4 (declarations -> declaration .)
    INTEGER         reduce using rule 4 (declarations -> declaration .)
    FLOAT           reduce using rule 4 (declarations -> declaration .)
    STRING          reduce using rule 4 (declarations -> declaration .)
    $end            reduce using rule 4 (declarations -> declaration .)
    }               reduce using rule 4 (declarations -> declaration .)


state 6

    (7) declaration -> TYPE . inits ;
    (77) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr
    (9) inits -> . inits , init
    (10) inits -> . init
    (11) init -> . ID = expression

    ID              shift and go to state 14

    inits                          shift and go to state 13
    init                           shift and go to state 15

state 7

    (8) declaration -> error . ;

    ;               shift and go to state 16


state 8

    (75) fundefs -> fundef .

    TYPE            reduce using rule 75 (fundefs -> fundef .)
    error           reduce using rule 75 (fundefs -> fundef .)
    ID              reduce using rule 75 (fundefs -> fundef .)
    IF              reduce using rule 75 (fundefs -> fundef .)
    WHILE           reduce using rule 75 (fundefs -> fundef .)
    FOR             reduce using rule 75 (fundefs -> fundef .)
    RETURN          reduce using rule 75 (fundefs -> fundef .)
    BREAK           reduce using rule 75 (fundefs -> fundef .)
    CONTINUE        reduce using rule 75 (fundefs -> fundef .)
    {               reduce using rule 75 (fundefs -> fundef .)
    (               reduce using rule 75 (fundefs -> fundef .)
    INTEGER         reduce using rule 75 (fundefs -> fundef .)
    FLOAT           reduce using rule 75 (fundefs -> fundef .)
    STRING          reduce using rule 75 (fundefs -> fundef .)
    $end            reduce using rule 75 (fundefs -> fundef .)
    }               reduce using rule 75 (fundefs -> fundef .)
    ELSE            reduce using rule 75 (fundefs -> fundef .)


state 9

    (1) program -> ext_declarations fundefs . instructions
    (74) fundefs -> fundefs . fundef
    (12) instructions -> . instructions instruction
    (13) instructions -> . instruction
    (77) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (14) instruction -> . labeled_instr
    (15) instruction -> . assignment ;
    (16) instruction -> . declaration
    (17) instruction -> . choice_instr
    (18) instruction -> . while_instr
    (19) instruction -> . for_instr
    (20) instruction -> . return_instr
    (21) instruction -> . break_instr
    (22) instruction -> . continue_instr
    (23) instruction -> . compound_instr
    (24) instruction -> . statement
    (25) instruction -> . expression ;
    (27) labeled_instr -> . ID : instruction
    (28) assignment -> . ID = expression
    (29) assignment -> . ID = error ;
    (6) declaration -> . fundefs
    (7) declaration -> . TYPE inits ;
    (8) declaration -> . error ;
    (30) choice_instr -> . IF ( condition ) instruction
    (31) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (32) choice_instr -> . IF ( error ) instruction
    (33) choice_instr -> . IF ( error ) instruction ELSE instruction
    (34) while_instr -> . WHILE ( condition ) instruction
    (37) while_instr -> . WHILE ( error ) instruction
    (35) for_instr -> . FOR ( instruction expression ; assignment ) instruction
    (36) for_instr -> . FOR ( error ) instruction
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (26) statement -> . ID ( expr_list_or_empty ) ;
    (46) expression -> . const
    (47) expression -> . ID
    (48) expression -> . ( expression )
    (49) expression -> . ( error )
    (50) expression -> . ID ( expr_list_or_empty )
    (51) expression -> . ID ( error )
    (52) expression -> . expression + expression
    (53) expression -> . expression - expression
    (54) expression -> . expression * expression
    (55) expression -> . expression / expression
    (56) expression -> . expression % expression
    (57) expression -> . expression | expression
    (58) expression -> . expression & expression
    (59) expression -> . expression ^ expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression SHL expression
    (63) expression -> . expression SHR expression
    (64) expression -> . expression EQ expression
    (65) expression -> . expression NEQ expression
    (66) expression -> . expression > expression
    (67) expression -> . expression < expression
    (68) expression -> . expression LE expression
    (69) expression -> . expression GE expression
    (74) fundefs -> . fundefs fundef
    (75) fundefs -> . fundef
    (76) fundefs -> .
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    TYPE            shift and go to state 20
    ID              shift and go to state 21
    error           shift and go to state 7
    IF              shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    RETURN          shift and go to state 38
    BREAK           shift and go to state 39
    CONTINUE        shift and go to state 40
    {               shift and go to state 41
    (               shift and go to state 22
    $end            reduce using rule 76 (fundefs -> .)
    INTEGER         shift and go to state 43
    FLOAT           shift and go to state 44
    STRING          shift and go to state 45

  ! TYPE            [ reduce using rule 76 (fundefs -> .) ]
  ! ID              [ reduce using rule 76 (fundefs -> .) ]
  ! error           [ reduce using rule 76 (fundefs -> .) ]
  ! IF              [ reduce using rule 76 (fundefs -> .) ]
  ! WHILE           [ reduce using rule 76 (fundefs -> .) ]
  ! FOR             [ reduce using rule 76 (fundefs -> .) ]
  ! RETURN          [ reduce using rule 76 (fundefs -> .) ]
  ! BREAK           [ reduce using rule 76 (fundefs -> .) ]
  ! CONTINUE        [ reduce using rule 76 (fundefs -> .) ]
  ! {               [ reduce using rule 76 (fundefs -> .) ]
  ! (               [ reduce using rule 76 (fundefs -> .) ]
  ! INTEGER         [ reduce using rule 76 (fundefs -> .) ]
  ! FLOAT           [ reduce using rule 76 (fundefs -> .) ]
  ! STRING          [ reduce using rule 76 (fundefs -> .) ]

    fundefs                        shift and go to state 3
    instructions                   shift and go to state 17
    fundef                         shift and go to state 18
    instruction                    shift and go to state 19
    compound_instr                 shift and go to state 23
    labeled_instr                  shift and go to state 24
    assignment                     shift and go to state 25
    declaration                    shift and go to state 26
    choice_instr                   shift and go to state 27
    while_instr                    shift and go to state 28
    for_instr                      shift and go to state 29
    return_instr                   shift and go to state 30
    break_instr                    shift and go to state 31
    continue_instr                 shift and go to state 32
    statement                      shift and go to state 33
    expression                     shift and go to state 34
    const                          shift and go to state 42

state 10

    (77) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr

    ID              shift and go to state 46


state 11

    (74) fundefs -> fundefs fundef .
